search tenant implement properly
