# docs/openapi.json
@@ -137,59 +137,8 @@
             "type" : "string"
           }
         }, {
-          "description" : "Require exact name match",
-          "name" : "exactMatch",
-          "in" : "query",
-          "schema" : {
-            "type" : "boolean"
-          }
-        }, {
-          "description" : "Pagination offset",
-          "name" : "first",
-          "in" : "query",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "description" : "Tenant name or ID search keyword (alternative)",
-          "name" : "keyword",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Maximum results size (defaults to 100)",
-          "name" : "max",
-          "in" : "query",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
           "description" : "Tenant mobile number (exact match)",
           "name" : "mobileNumber",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Tenant attribute query (e.g., q=city:London)",
-          "name" : "q",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Tenant name or ID search keyword (partial match for name, exact for ID)",
-          "name" : "search",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Tenant status (exact match)",
-          "name" : "status",
           "in" : "query",
           "schema" : {
             "type" : "string"
